--- a/encaminhamento.html
+++ b/encaminhamento.html
@@ -23,27 +23,20 @@
 <body>
     <!-- cabeçalho do site -->
     <header class="cabecalho ">
-        <main>
+        <div class="p-3 mb-2 bg-success">
             <!-- Imagem logo -->
-            <img src="./img/sgg-n (1).png" class="img-fluid rounded float-start d-none d-sm-block">
+            <img class="d-none d-sm-block aaaaaa" src="./img/sgg-n (1).png">
+
 
             <!-- cor, tamanho e tipo (bootstrap) -->
-            <div class="p-3 mb-2 bg-success text-white">
-                <!-- Titulo do site -->
-                <figure class="text-center">
-                    <blockquote class="blockquote">
-                        <h3>Gestão de Encaminhamento SGG</h3>
-                    </blockquote>
-                </figure>
+            <!-- Titulo do site -->
+            <h3 class="text-center text-white  texto">TITULO SISTEMA</h3>
 
 
-
-            </div>
-            <button class="btn btn-success espacamentoBaixo position-absolute top-0 end-0" type="button"
-                data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+            <button class="btn btn-success position-absolute top-0 end-0 botao" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                 <img src="./img/menu.svg">
             </button>
-
             <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
                 id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                 <div class="offcanvas-header text-dark">
@@ -52,24 +45,49 @@
                         aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <a href="./index.html" target="_blank" class="espacamentoBaixo link-success">Gestão de Reuniões
-                        SGG</a>
-                    <div class="testaa">
-                        <div class="form-floating espacamento">
-                            <select class="form-select  " aria-label=".form-select-sm example" id="gerencias">
-                                <option value="" selected hidden>--Selecione--</option>
-                            </select>
-                            <label for="floatingSelectGrid">Reunião</label>
-                        </div>
-                        <textarea class="form-control" placeholder="Pauta da Reunião" id="adicional"
-                            style="height: 400px; resize: none"></textarea>
-                    </div>
+                    <textarea class="form-control" placeholder="Pauta da reuniao" id="adicional"
+                        style="height: 400px; resize: none"></textarea>
+                </div>
+
+
+
+
+
+            </div>
+        </div>
+
+
+
+        </div>
+
+    </header>
+
+    <div class="container-fluid">
+        <button class="btn btn-success" type="button" data-bs-toggle="offcanvas" data-bs-target="#off"
+            aria-controls="off">
+            <img src="./img/chevrons-right.svg">
+        </button>
+
+        <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="off"
+            aria-labelledby="off">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="off">Menu</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <div>
+                    <img src="./img/corner-down-right.svg">
+                    <a href="./encaminhamento.html" target="_self" class="link-success">Cadastro de Encaminhamento</a>
+                </div>
+                <div class="espacamentoAlto">
+                    <img src="./img/corner-down-right.svg">
+                    <a href="./index.html" target="_self" class="espacamentoBaixo link-success">Cadastro de Reunião</a>
                 </div>
             </div>
-
-
-        </main>
-    </header>
+        </div>
+        <h4 class="text-center texto2">Cadastro de Encaminhamento</h4>
+    </div>
     <form class="form ">
         <div class="container teste">
             <div class="row ">
@@ -85,40 +103,24 @@
                             </select>
                             <label for="floatingSelectGrid">Gerencia(*)</label>
                         </div>
-                        <div class="form-floating col-md-4 espacamentoBaixo">
+                        <div class="form-floating col-md espacamentoBaixo">
                             <input class="form-control" type="text" placeholder="Nome" id="NomeUsuario"
                                 disabled></input>
                             <label for="floatingTextarea2">Digite seu nome(*)</label>
                         </div>
-                        <div class="col-md-4">
-                            <legend class="col-form-label  pt-0">Ponto de Controle?</legend>
-                            <div class="form-check form-check-inline espacamentoEsq espacamentoPonto">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                                    value="1" checked>
-                                <label class="form-check-label" for="inlineRadio1">
-                                    Sim
-                                </label>
-                            </div>
-                            <div class="form-check form-check-inline espacamentoEsq espacamentoPonto">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                                    value="0">
-                                <label class="form-check-label" for="inlineRadio2">
-                                    Não
-                                </label>
-                            </div>
-                        </div>
+
                     </div>
                     <div class="row g-2 espacamento">
                         <div class="col-md">
                             <div class="form-floating">
-                                <select onchange="escreve(), datas()" class="form-select  "
-                                    aria-label=".form-select-sm example" id="reuniao" disabled>
-                                    <option value="" selected hidden>--Selecione o Projeto--</option>
+                                <select onchange="" class="form-select  " aria-label=".form-select-sm example"
+                                    id="reuniao" disabled>
+                                    <option value="" selected hidden>--Selecione a Reunião--</option>
                                 </select>
-                                <label for="floatingSelectGrid">Projetos(*)</label>
+                                <label for="floatingSelectGrid">Reuniões(*)</label>
                             </div>
                         </div>
-                        <div class="col-md">
+                        <!-- <div class="col-md">
                             <div class="form-floating">
                                 <input class="form-control" type="text" aria-label=".form-control-lg example"
                                     placeholder="Projeto " id="projetoss" disabled>
@@ -131,7 +133,7 @@
                                     placeholder=" Data" id="data" disabled>
                                 <label for="floatingInputGrid"> Data</label>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="form-floating espacamentoAlto">
                         <textarea class="form-control" placeholder="Ação#Responsável#Prazo" id="primeiro"
